@@ -1,39 +1,20 @@
-GAMEBOARDSTART 35,35
-#################.#################
-############...........############
-#########.................#########
-########...................########
-#######.....................#######
-#####.........................#####
-#####.........................#####
-####...........................####
-###..........#########..........###
-##..........###########..........##
-##........###############........##
-##........###############........##
-#........#################........#
-#.......###################.......#
-#.......###################.......#
-#.......###################.......#
-#.......###################.......#
-######..###################........
-#.......###################.......#
-#.......###################.......#
-#.......###################.......#
-#.......###################.......#
-#........#################........#
-##........###############........##
-##........###############........##
-##..........###########..........##
-###..........#########..........###
-####.............####..........####
-#####............#............#####
-#####............#............#####
-#######.....................#######
-########...................########
-#########.................#########
-############...........############
-#################.#################
+GAMEBOARDSTART 21,17
+.#####.......########
+####.####.###.#######
+##.#.####.###.##.####
+##.#...........#.####
+##.##..##.##..##.####
+##.######.######.####
+##...............####
+##.#############.####
+##.########.####.####
+.......####..........
+##.########.####.####
+#####################
+########.############
+#####################
+#####################
+#####################
+##########.##########
 GAMEBOARDEND
-POS 1 7,18 E
-POS 2 22,28 E
+POS 1 10,7 N
