@@ -22,7 +22,7 @@ SPIELRASTER="Test.txt"
 #SPIELRASTER="../Spielraster/simple.txt"
 #SPIELRASTER="../Spielraster/200x200.txt"
 #SPIELRASTER="../Spielraster/100x100.txt"
-#SPIELRASTER="../Spielraster/50x50.txt"
+SPIELRASTER="../Spielraster/50x50.txt"
 #SPIELRASTER="../Spielraster/5x5.txt"
 #SPIELRASTER="../Spielraster/10x10.txt"
 #SPIELRASTER="../Spielraster/Säulen_21.txt"
