@@ -1,5 +1,7 @@
 2014-12-14
 	- Die Tiefensuche beim Raum ausfüllen ermittelt die Tiefe nun auch dynamisch entsprechend dem Zeitlimit
+	- Tiefensuche abgeschlossen
+	- Thread-Unterstützung für Tiefensuche beim Raum ausfüllen
 
 2014-12-13
 	- Fehler in der Bewertung der Tiefensuche korrigiert
